# RimeTool

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
config/: config.toml  log4rs.toml  log4rs.yaml
src/: error_util.rs  main.rs
