[package]
name = "rimetool"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Yiklek/RimeTool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
image = "~0.25"
log = "~0.4"
log4rs = { version = "~1.3", features = ["toml_format"]}
once_cell = "~1.20"
serde = "~1"
sysinfo = "~0.33"
tao = "~0.31"
toml = "~0.8"
tray-icon = "~0.19"

[target.'cfg(windows)'.dependencies]
registry = "~1.3"


[target.'cfg(windows)'.build-dependencies]
winres = "*"
